[package]
name = "crypto"
version = "0.1.0"
authors = ["maxtnuk <maxtnuk@gmail.com>"]

[dependencies]
eos_type = { path = "../eos-type" ,version = "0.1.0"}
hex = "0.3.2"
ripemd160 = "0.8.0"
ring = "0.13.3"
rand = "0.5.5"
regex = "1.0.5"
rust-base58 = "0.0.4"
libsecp256k1 = "0.2.1"
nalgebra = "0.16.10"
chrono = { version = "0.4", features = ["serde"] }
