[package]
name = "eos"
version = "0.1.0"
authors = ["maxtnuk <maxtnuk@gmail.com>"]

[dependencies]
eos_api = { path = "../eos-api" ,version = "0.1.0"}
eos_type = { path = "../eos-type" ,version = "0.1.0"}
crypto = { path = "../eos-crypto" ,version = "0.1.0"}
serde = "1.0.78"
serde_json = "1.0.27"
bincode = "1.0.1"
regex = "1.0.5"
num = "0.2.0"
num-bigint = "0.2.0"
